Sat Aug  3 22:47:11 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c: The branch condition of selecting multiplication
	  algorighms should check smaller argument because Karatsuba and Toom3
	  is effective only if both arguments are big.
	  (bary_mul_toom3_branch): Compare the smaller argument to
	  TOOM3_MUL_DIGITS.
	  (bary_mul): Compare the smaller argument to KARATSUBA_MUL_DIGITS.

Sat Aug  3 22:23:31 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_orig): Receive the number to stringize as
	  BDIGIT array and size.
	  (big2str_karatsuba): Receive the number to stringize as BDIGIT array
	  and size.  Use an temporary array of BDIGIT.
	  (rb_big2str1): Follow the above change.

Sat Aug  3 13:30:04 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (MAX_BASE36_POWER_TABLE_ENTRIES): Renamed from
	  MAX_BIG2STR_TABLE_ENTRIES.
	  (base36_power_cache): Renamed from big2str_power_cache.
	  (base36_numdigits_cache): Renamed from big2str_numdigits_cache.

Sat Aug  3 10:33:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_set_integer_literal): use rb_rational_raw1() for
	  integral rational because no reduction is needed with 1.

Sat Aug  3 09:46:07 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/etc/etc.c (setup_passwd, setup_group): set proper encodings to
	  string members.

Sat Aug  3 09:30:57 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* struct.c (rb_struct_define_under): new function to define Struct
	  under the given namespace, not under Struct.  [Feature #8264]

	* ext/etc/etc.c: use rb_struct_define_under.

Sat Aug  3 06:55:29 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* parse.y (value_expr_gen): now NODE_DEFN and NODE_DEFS are not void
	  value expressions.  get rid of wrong warning with -w, and make to
	  pass tests with chkbuild.  ref. [Feature #3753]

Sat Aug  3 04:23:48 2013  Eric Hodel  <drbrain@segment7.net>

	* doc/syntax/refinements.rdoc:  Remove mention of instance_eval and
	  module_eval from scope section per: